# market-latency-risk-lab

./: .gitignore  Cargo.toml  README.md  requirements.txt
.github/workflows/: sim-ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  state.rs  ws.rs
crates/core-sim/: Cargo.toml
crates/core-sim/src/: config.rs  fills.rs  generators.rs  lib.rs  orderbook.rs  state.rs
crates/lab-server/: Cargo.toml
crates/lab-server/src/: config.rs  main.rs  predictors.rs  wiring.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: latency.rs  throughput.rs
crates/runtime/src/: benchmark.rs  engine.rs  events.rs  lib.rs  live_runner.rs  logging.rs  metrics.rs  paper_exec.rs  replay.rs  supervisor.rs
crates/runtime/src/live/: btc_feed.rs  btc_parse.rs  lag_detector.rs  median.rs  mod.rs  polymarket_discovery.rs  polymarket_quote.rs  predictors.rs  types.rs
crates/strategy/src/: divergence.rs  lib.rs  live_signal.rs  risk.rs  sizing.rs
crates/ui/src/: lib.rs
crates/ui/static/: app.js  index.html  styles.css
docs/: methodology.md
docs/migration/: python-to-rust.md
docs/operations/: paper-live-checklist.md
docs/plans/: 2026-02-28-dashboard-settings-btc15m-design.md  2026-02-28-dashboard-settings-btc15m-implementation.md  2026-02-28-paper-live-polymarket-design.md  2026-02-28-paper-live-polymarket-implementation.md  2026-02-28-polymarket-lag-refinement-design.md  2026-02-28-polymarket-lag-refinement-implementation.md  2026-02-28-realtime-prices-ui-refresh-design.md  2026-02-28-realtime-prices-ui-refresh-implementation.md  2026-02-28-rust-latency-lab-design.md  2026-02-28-rust-latency-lab-implementation.md  task-1-tdd-proof.md  verification-checklist.md
sim/: engine.py  main.py  models.py
tests/: test_logic.py
