[package]
name = "lab-server"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
ui = { path = "../ui" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
