[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
