[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
time = { version = "0.3", features = ["parsing"] }
strategy = { path = "../strategy" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
